# fernet-encrypted

./: .gitignore  admin.py  company_status.csv  employees_employee.csv  employees_geography.csv  misc_city.csv  misc_province.csv  misc_relationship.csv  pyproject.toml
config/: settings.py
employees/: admin.py  forms.py  managers.py  models.py
employees/management/commands/: encrypt_sin.py  populate_employees.py
employees/migrations/: 0001_initial.py  0002_employee_is_active.py  0003_remove_employee_given_name_remove_employee_surname.py  0004_employee_sin_e_alter_employee_is_active.py  0005_remove_employee_is_active.py  0006_alter_employee_address_alter_employee_address2_and_more.py  0007_employee_status.py
misc/: admin.py  models.py
misc/migrations/: 0001_initial.py
utils/: helpers.py
