[project]
name = "fernet-encrypted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.0",
    "django==5.2",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-fernet-encrypted-fields>=0.3.1",
    "psycopg2-binary>=2.9.11",
    "randomcolor>=0.4.4.6",
    "werkzeug>=3.1.5",
]
